--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,49 +1,75 @@
-<div class="row">
-  <div class="col-md-3">
-    <span class="hipster img-fluid rounded"></span>
+<div class="section1">
+  <!--  <div class="wrap-container">-->
+  <div class="title">Running for Brews 5k Events</div>
+  <p class="paragraph">
+    We Love 5k Running & Craft Brews Running for Brews celebrates our love for fitness and craft brews. We meet a local bars, run a 2 or 3.1
+    mile route, and then drink delicious craft brews at the finish. With over 10,000+ members nationwide, RFB is continuously gathering
+    like-minded runners to socialize and have some fun. Find Out How It All Began Find your location, like us on facebook, and come join us
+    at a weekly event!
+  </p>
+  <div class="video-container">
+    <div class="color-overlay"></div>
+    <video class="video-size" autoplay loop muted>
+      <source src="../../../content/video/video.mp4" type="video/mp4" />
+    </video>
   </div>
-
-  <div class="col-md-9">
-    <h1 class="display-4">Welcome, Java Hipster!</h1>
-
-    <p class="lead">This is your homepage</p>
-
-    <div [ngSwitch]="isAuthenticated()">
-      <div class="alert alert-success" *ngSwitchCase="true">
-        <span id="home-logged-message" *ngIf="account">You are logged in as user "{{ account.login }}".</span>
+</div>
+<div class="section2">
+  <div class="background-img-container">
+    <div class="color2-overlay">
+      <img src="../../../content/images/kevincover.jpg" alt="" />
+    </div>
+  </div>
+</div>
+<div class="section3">
+  <h1>Find A Running for Brews 5k Location</h1>
+</div>
+<div class="section4">
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="../../../content/images/runningforbrews5k-1.jpg" alt="First slide" />
       </div>
-
-      <div class="alert alert-warning" *ngSwitchCase="false">
-        <span>If you want to </span>
-        <a class="alert-link" (click)="login()">sign in</a
-        ><span
-          >, you can try the default accounts:<br />- Administrator (login="admin" and password="admin") <br />- User (login="user" and
-          password="user").</span
-        >
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../../../content/images/runningforbrews5k-2.jpg" alt="Second slide" />
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="../../../content/images/runningforbrews5k-3.jpg" alt="Third slide" />
+      </div>
+      <div class="carousel-caption d-none d-md-block">
+        <h1>Real Runners. Real Drinkers. Real Friends.</h1>
+        <p></p>
       </div>
     </div>
-
-    <p>If you have any question on JHipster:</p>
-
-    <ul>
-      <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer">JHipster homepage</a></li>
-      <li>
-        <a href="http://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener noreferrer">JHipster on Stack Overflow</a>
-      </li>
-      <li>
-        <a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener noreferrer"
-          >JHipster bug tracker</a
-        >
-      </li>
-      <li>
-        <a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">JHipster public chat room</a>
-      </li>
-      <li><a href="https://twitter.com/jhipster" target="_blank" rel="noopener noreferrer">follow @jhipster on Twitter</a></li>
-    </ul>
-
-    <p>
-      <span>If you like JHipster, don't forget to give us a star on</span>
-      <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">GitHub</a>!
-    </p>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+  <div class="section5">
+    <div class="img-container">
+      <img src="../../content/images/runningclub25.jpg" alt="" />
+    </div>
+    <div class="text-container">
+      <h1>Local Beer Running Club | 5k & Craft Beers</h1>
+      <p>
+        This running club is all about meeting people new in town, drinking craft beers, and enjoying fitness with a beautiful run. Grab a
+        friend and check out the locations across the US, Running for Brews gives local friends the opportunity to train for races,
+        socialize with local professionals, and tour the city during a run.
+      </p>
+      <p>
+        Running Advice - Don't be shy, your local chapter Organizer will help you mingle with the crowd. Come with friends to the special
+        events or join us on the weekly run. Running for Brews is a great place to feel welcome with exercise and brews. See you soon!
+      </p>
+    </div>
   </div>
 </div>
