--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <p>This is your footer</p>
+  <p>© Company {{ currentYear }} The Running for Brews. All Rights Reserved. Please Run Responsibly.</p>
 </div>
