--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,10 +1,10 @@
 <jhi-page-ribbon></jhi-page-ribbon>
 
 <div>
-  <router-outlet name="navbar"></router-outlet>
+  <router-outlet name="navbar" style="display: block; height: 71px"></router-outlet>
 </div>
 
-<div class="container-fluid">
+<div class="container-xxl">
   <div class="card jh-card">
     <router-outlet></router-outlet>
   </div>
