adding Security Roles(94)

--- a/src/main/webapp/app/entities/rfb-event-attendance/list/rfb-event-attendance.component.html
+++ b/src/main/webapp/app/entities/rfb-event-attendance/list/rfb-event-attendance.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 id="page-heading" data-cy="RfbEventAttendanceHeading">
-    <span>Rfb Event Attendances</span>
+    <span>Event Attendances</span>
 
     <div class="d-flex justify-content-end">
       <button class="btn btn-info mr-2" (click)="reset()" [disabled]="isLoading">
@@ -15,7 +15,7 @@
         [routerLink]="['/rfb-event-attendance/new']"
       >
         <fa-icon icon="plus"></fa-icon>
-        <span> Create a new Rfb Event Attendance </span>
+        <span> Create a new Event Attendance </span>
       </button>
     </div>
   </h2>
