--- a/src/main/webapp/app/entities/rfb-event/list/rfb-event.component.html
+++ b/src/main/webapp/app/entities/rfb-event/list/rfb-event.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 id="page-heading" data-cy="RfbEventHeading">
-    <span>Rfb Events</span>
+    <span>Events</span>
 
     <div class="d-flex justify-content-end">
       <button class="btn btn-info mr-2" (click)="loadPage()" [disabled]="isLoading">
@@ -15,7 +15,7 @@
         [routerLink]="['/rfb-event/new']"
       >
         <fa-icon icon="plus"></fa-icon>
-        <span> Create a new Rfb Event </span>
+        <span> Create a New Event </span>
       </button>
     </div>
   </h2>
