--- a/src/main/webapp/app/entities/rfb-location/list/rfb-location.component.html
+++ b/src/main/webapp/app/entities/rfb-location/list/rfb-location.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 id="page-heading" data-cy="RfbLocationHeading">
-    <span>Rfb Locations</span>
+    <span>Locations</span>
 
     <div class="d-flex justify-content-end">
       <button class="btn btn-info mr-2" (click)="loadPage()" [disabled]="isLoading">
@@ -9,13 +9,14 @@
       </button>
 
       <button
+        *jhiHasAnyAuthority="['ROLE_ADMIN']"
         id="jh-create-entity"
         data-cy="entityCreateButton"
         class="btn btn-primary jh-create-entity create-rfb-location"
         [routerLink]="['/rfb-location/new']"
       >
         <fa-icon icon="plus"></fa-icon>
-        <span> Create a new Rfb Location </span>
+        <span> Create a new Location </span>
       </button>
     </div>
   </h2>
@@ -32,15 +33,15 @@
     <table class="table table-striped" aria-describedby="page-heading">
       <thead>
         <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="loadPage.bind(this)">
-          <th scope="col" jhiSortBy="id"><span>ID</span> <fa-icon icon="sort"></fa-icon></th>
+          <th *jhiHasAnyAuthority="'ROLE_ADMIN'" scope="col" jhiSortBy="id"><span>ID</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col" jhiSortBy="locationName"><span>Location Name</span> <fa-icon icon="sort"></fa-icon></th>
           <th scope="col" jhiSortBy="runDayOfWeek"><span>Run Day Of Week</span> <fa-icon icon="sort"></fa-icon></th>
-          <th scope="col"></th>
+          <th *jhiHasAnyAuthority="'ROLE_ADMIN'" scope="col"></th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let rfbLocation of rfbLocations; trackBy: trackId" data-cy="entityTable">
-          <td>
+          <td *jhiHasAnyAuthority="'ROLE_ADMIN'">
             <a [routerLink]="['/rfb-location', rfbLocation.id, 'view']">{{ rfbLocation.id }}</a>
           </td>
           <td>{{ rfbLocation.locationName }}</td>
@@ -48,6 +49,7 @@
           <td class="text-right">
             <div class="btn-group">
               <button
+                *jhiHasAnyAuthority="'ROLE_ADMIN'"
                 type="submit"
                 [routerLink]="['/rfb-location', rfbLocation.id, 'view']"
                 class="btn btn-info btn-sm"
@@ -58,6 +60,7 @@
               </button>
 
               <button
+                *jhiHasAnyAuthority="'ROLE_ADMIN'"
                 type="submit"
                 [routerLink]="['/rfb-location', rfbLocation.id, 'edit']"
                 class="btn btn-primary btn-sm"
@@ -67,7 +70,13 @@
                 <span class="d-none d-md-inline">Edit</span>
               </button>
 
-              <button type="submit" (click)="delete(rfbLocation)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
+              <button
+                *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                type="submit"
+                (click)="delete(rfbLocation)"
+                class="btn btn-danger btn-sm"
+                data-cy="entityDeleteButton"
+              >
                 <fa-icon icon="times"></fa-icon>
                 <span class="d-none d-md-inline">Delete</span>
               </button>
