--- a/src/main/webapp/app/entities/rfb-user/list/rfb-user.component.html
+++ b/src/main/webapp/app/entities/rfb-user/list/rfb-user.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 id="page-heading" data-cy="RfbUserHeading">
-    <span>Rfb Users</span>
+    <span>Users</span>
 
     <div class="d-flex justify-content-end">
       <button class="btn btn-info mr-2" (click)="loadAll()" [disabled]="isLoading">
@@ -15,7 +15,7 @@
         [routerLink]="['/rfb-user/new']"
       >
         <fa-icon icon="plus"></fa-icon>
-        <span> Create a new Rfb User </span>
+        <span> Create a new Runner </span>
       </button>
     </div>
   </h2>
