Revise show id problems

--- a/src/main/webapp/app/entities/rfb-event-attendance/detail/rfb-event-attendance-detail.component.html
+++ b/src/main/webapp/app/entities/rfb-event-attendance/detail/rfb-event-attendance-detail.component.html
@@ -21,13 +21,13 @@
         <dt><span>Rfb Event</span></dt>
         <dd>
           <div *ngIf="rfbEventAttendance.rfbEvent">
-            <a [routerLink]="['/rfb-event', rfbEventAttendance.rfbEvent?.id, 'view']">{{ rfbEventAttendance.rfbEvent?.id }}</a>
+            <a [routerLink]="['/rfb-event', rfbEventAttendance.rfbEvent?.id, 'view']">{{ rfbEventAttendance.rfbEvent?.eventDate }}</a>
           </div>
         </dd>
         <dt><span>Rfb User</span></dt>
         <dd>
           <div *ngIf="rfbEventAttendance.rfbUser">
-            <a [routerLink]="['/rfb-user', rfbEventAttendance.rfbUser?.id, 'view']">{{ rfbEventAttendance.rfbUser?.id }}</a>
+            <a [routerLink]="['/rfb-user', rfbEventAttendance.rfbUser?.id, 'view']">{{ rfbEventAttendance.rfbUser?.username }}</a>
           </div>
         </dd>
       </dl>
