--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -23,6 +23,7 @@
 </div>
 <div class="section3">
   <h1>Find A Running for Brews 5k Location</h1>
+  <jhi-location-list></jhi-location-list>
 </div>
 <div class="section4">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
